[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resources/DefaultEnv.tres" type="Environment" id=1]
[ext_resource path="res://Src/Screens/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/Bangers/Bangers-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GUI/TitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Src/Level/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Src/Level/tree1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/Characters/Character.tscn" type="PackedScene" id=7]
[ext_resource path="res://Src/Shelf.tscn" type="PackedScene" id=8]
[ext_resource path="res://Src/Characters/RandomCharacter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/meshes/floor_tile.glb" type="PackedScene" id=10]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=11]
[ext_resource path="res://Assets/meshes/terrain.obj" type="ArrayMesh" id=12]

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 11
outline_color = Color( 0.854902, 0.160784, 0.109804, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.0823529, 0.662745, 0.309804, 1 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.2, 2.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -5.44971, 1.31613, 6.90358 ), Vector3( -5.44971, 1.31613, 6.90358 ), Vector3( -5.44971, 3.09828, 6.90358 ), Vector3( -5.44971, 1.41868, 6.90358 ), Vector3( -5.44971, 1.39709, 6.90358 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.4, 2, 2.9, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 27.817, 0 ), Vector3( 2.74803, 27.6917, -5.21957 ), Vector3( -0.954546, 27.7902, 1.81085 ), Vector3( -0.888, 27.792, 0 ), Vector3( -0.7881, 27.7948, 0 ), Vector3( 0.419686, 27.8025, -2.12208 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2.5, 2.7, 2.9, 3.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.66996, 1.31613, 8.07055 ), Vector3( 3.66996, 1.31613, 8.07055 ), Vector3( 2.74711, 1.31613, 9.70622 ), Vector3( 2.74711, 1.31613, 9.70622 ), Vector3( 2.74711, 2.71001, 9.70622 ), Vector3( 2.74711, 1.79754, 9.70622 ), Vector3( 2.74711, 1.33525, 7.4666 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -43.308, 0 ), Vector3( 0, -24.881, 0 ), Vector3( 0, -43.308, 0 ), Vector3( 0, -17.882, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -21.081, 0 ), Vector3( -0.954673, -21.0604, -2.47754 ), Vector3( -0.716, -21.066, 0 ), Vector3( 0.380277, -21.0729, 2.22549 ) ]
}

[node name="MainMenu" type="Spatial"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -69.0
margin_right = 640.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.403922, 0.12549, 1 )
text = "711 Panic!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="CenterContainer" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 227.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
margin_left = 401.0
margin_top = 60.0
margin_right = 879.0
margin_bottom = 433.0
custom_constants/separation = 74

[node name="StartButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_right = 478.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 4 )
text = "Start Game"
flat = true

[node name="CharacterSelectionButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 149.0
margin_right = 478.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 4 )
text = "Character Selection"
flat = true

[node name="ControlsButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 478.0
margin_bottom = 373.0
custom_fonts/font = ExtResource( 4 )
text = "Controls"
flat = true

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -382.0
margin_bottom = 217.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer"]
margin_right = 382.0
margin_bottom = 27.0
theme = ExtResource( 11 )
text = "Background Music"

[node name="HSlider2" type="HSlider" parent="Control/HBoxContainer"]
margin_top = 31.0
margin_right = 382.0
margin_bottom = 47.0
value = 100.0

[node name="Label2" type="Label" parent="Control/HBoxContainer"]
margin_top = 51.0
margin_right = 382.0
margin_bottom = 78.0
theme = ExtResource( 11 )
text = "Sound EFFECts"

[node name="HSlider" type="HSlider" parent="Control/HBoxContainer"]
margin_top = 82.0
margin_right = 382.0
margin_bottom = 98.0
value = 100.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.998669, -0.023366, 0.0459912, 0, 0.891537, 0.452948, -0.0515865, -0.452345, 0.89035, 0, 5.78887, 14.4558 )
environment = ExtResource( 1 )

[node name="Terrain" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Terrain"]
transform = Transform( -0.0867856, 0, -1.99812, 0, 2, 0, 1.99812, 0, -0.0867856, 0.0211911, 0.0525494, 0.153796 )
mesh = ExtResource( 12 )
material/0 = SubResource( 1 )

[node name="tree1" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -13.4269 )

[node name="tree2" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -7.09194, 0, -13.4269 )

[node name="tree3" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 1.74446, 0, -0.978186, 0, 2, 0, 0.978186, 0, 1.74446, -7.09194, 0, -16.482 )

[node name="tree4" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 1.74446, 0, -0.978186, 0, 2, 0, 0.978186, 0, 1.74446, -3.6429, 0, -11.8397 )

[node name="tree5" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 1.23901, 0, -1.56999, 0, 2, 0, 1.56999, 0, 1.23901, -13.2417, 0, -0.0439014 )

[node name="tree14" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 0.124603, 0.153928, -1.48033, -0.0128544, 1.49208, 0.152716, 0.992123, 4.19095e-09, 0.187896, -13.2417, 0, 5.37839 )

[node name="tree15" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 0.149033, -0.148164, 1.47583, -0.0128544, 1.49208, 0.152716, -0.988749, -0.0417307, 0.220465, -13.2417, 0, -11.0656 )

[node name="tree16" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -0.606429, -0.133068, 1.18526, -0.0128544, 1.49208, 0.152716, -0.795033, 0.0773756, -0.906552, 7.55919, 0, -8.80186 )

[node name="tree17" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -0.743522, 0.0878578, -0.999211, -0.0128544, 1.49208, 0.152716, 0.668587, 0.126392, -1.10827, 1.46652, 0, -8.80186 )

[node name="tree18" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -0.743522, 0.0878578, -0.999211, -0.0128544, 1.49208, 0.152716, 0.668587, 0.126392, -1.10827, 9.28782, 0, 2.57525 )

[node name="tree6" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 1.21029, 0.428107, -1.5336, -0.265214, 1.95364, 0.336061, 1.56999, 0, 1.23901, -13.2417, 0, -5.43934 )

[node name="tree7" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 1.21029, 0.428107, -1.5336, -0.265214, 1.95364, 0.336061, 1.56999, 0, 1.23901, -17.9736, 0, -5.43934 )

[node name="tree8" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -0.448039, 0.271207, -1.93021, -0.265214, 1.95364, 0.336061, 1.93104, 0.331244, -0.40169, -17.9736, 0, -0.439335 )

[node name="tree9" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -0.448039, 0.271207, -1.93021, -0.265214, 1.95364, 0.336061, 1.93104, 0.331244, -0.40169, 13.0264, 0, 2.29001 )

[node name="tree10" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -1.00732, 0.1592, -1.72045, -0.265214, 1.95364, 0.336061, 1.70733, 0.397405, -0.962863, 17.0264, 0, -2.70999 )

[node name="tree11" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( -1.00732, 0.1592, -1.72045, -0.265214, 1.95364, 0.336061, 1.70733, 0.397405, -0.962863, 17.0264, 0, -13.71 )

[node name="tree12" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 0.0967817, 0.351412, -1.96651, -0.265214, 1.95364, 0.336061, 1.97997, 0.24451, 0.141138, 10.0264, 0, -13.71 )

[node name="tree13" parent="Terrain" instance=ExtResource( 6 )]
transform = Transform( 0.0967817, 0.351412, -1.96651, -0.265214, 1.95364, 0.336061, 1.97997, 0.24451, 0.141138, 7.02641, 0, -13.71 )

[node name="Wall" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -6, 0, 5 )

[node name="Wall2" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4, 0, 5 )

[node name="Wall3" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2, 0, 5 )

[node name="Wall4" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 0, 5 )

[node name="Wall5" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4, 0, 5 )

[node name="Wall6" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, 5 )

[node name="Wall7" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8, 0, -1 )

[node name="Wall11" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10, 0, -1 )

[node name="Wall12" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, 0, -1 )

[node name="Wall13" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -2 )

[node name="Wall14" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -4 )

[node name="Wall15" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 12, 0, -5 )

[node name="Wall16" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, -5 )

[node name="Wall17" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8, 0, -5 )

[node name="Wall18" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6, 0, -5 )

[node name="Wall19" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4, 0, -5 )

[node name="Wall20" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, 0, -5 )

[node name="Wall21" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -5 )

[node name="Wall22" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, -5 )

[node name="Wall23" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4, 0, -5 )

[node name="Wall24" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6, 0, -5 )

[node name="Wall25" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8, 0, -5 )

[node name="Wall26" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9, 0, -4 )

[node name="Wall27" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9, 0, -2 )

[node name="Wall28" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9, 0, 0 )

[node name="Wall29" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9, 0, 2 )

[node name="Wall30" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9, 0, 4 )

[node name="Wall31" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -7.94444, 1.90735e-06, 4.96708 )

[node name="Wall8" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 4 )

[node name="Wall9" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 2 )

[node name="Wall10" parent="Terrain" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0 )

[node name="floor_tile" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.0966754, 0 )

[node name="floor_tile2" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.0966754, 0 )

[node name="floor_tile3" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.0966754, 0 )

[node name="floor_tile4" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0966754, 0 )

[node name="floor_tile5" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.0966754, 0 )

[node name="floor_tile6" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.0966754, 0 )

[node name="floor_tile7" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.0966754, 0 )

[node name="floor_tile8" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.0966754, 0 )

[node name="floor_tile9" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.0966754, 2 )

[node name="floor_tile10" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.0966754, 2 )

[node name="floor_tile11" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.0966754, 2 )

[node name="floor_tile12" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0966754, 2 )

[node name="floor_tile13" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.0966754, 2 )

[node name="floor_tile14" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.0966754, 2 )

[node name="floor_tile15" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.0966754, 2 )

[node name="floor_tile16" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.0966754, 2 )

[node name="floor_tile17" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.0966754, 4 )

[node name="floor_tile18" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.0966754, 4 )

[node name="floor_tile19" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.0966754, 4 )

[node name="floor_tile20" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0966754, 4 )

[node name="floor_tile21" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.0966754, 4 )

[node name="floor_tile22" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.0966754, 4 )

[node name="floor_tile23" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.0966754, 4 )

[node name="floor_tile24" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.0966754, 4 )

[node name="floor_tile25" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.0966754, -2 )

[node name="floor_tile26" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.0966754, -2 )

[node name="floor_tile27" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.0966754, -2 )

[node name="floor_tile28" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0966754, -2 )

[node name="floor_tile29" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.0966754, -2 )

[node name="floor_tile30" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.0966754, -2 )

[node name="floor_tile31" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.0966754, -2 )

[node name="floor_tile32" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.0966754, -2 )

[node name="floor_tile33" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.0966754, -4 )

[node name="floor_tile41" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.0966754, -2 )

[node name="floor_tile42" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.0966754, -4 )

[node name="floor_tile43" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.0966754, -2 )

[node name="floor_tile44" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.0966754, -4 )

[node name="floor_tile45" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0.0966754, -2 )

[node name="floor_tile46" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0.0966754, -4 )

[node name="floor_tile34" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.0966754, -4 )

[node name="floor_tile35" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.0966754, -4 )

[node name="floor_tile36" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0966754, -4 )

[node name="floor_tile37" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.0966754, -4 )

[node name="floor_tile38" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.0966754, -4 )

[node name="floor_tile39" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.0966754, -4 )

[node name="floor_tile40" parent="Terrain" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0.0966754, -4 )

[node name="Shelf" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0 )

[node name="Shelf2" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0, 0 )

[node name="Shelf3" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -3 )

[node name="Shelf4" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4, 0, -3 )

[node name="Shelf5" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -3 )

[node name="Shelf6" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0, -3 )

[node name="Shelf7" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )

[node name="Shelf8" parent="Terrain" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.270681, 0.490402, -0.828395, -0.152316, 0.871496, 0.466148, 0.950543, 0, 0.310593, -18.5438, 5.72599, 0 )
shadow_enabled = true

[node name="RandomCharacter" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.884168, 0.0252368, 0.466487, -0.0258368, 0.999653, -0.00511037, -0.466454, -0.0075341, 0.884513, -5.44971, 1.37685, 6.90358 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RandomCharacter"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="RandomCharacter2" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.727677, 0, -0.68592, 0, 1, 0, 0.68592, 0, 0.727677, 3.66996, 1.31613, 8.07055 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="RandomCharacter2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="Character" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.932327, -0.0386201, -0.359547, 0.0388316, 0.999224, -0.00663704, 0.359525, -0.0077739, 0.933103, 5.87055, 2.21571, -2.08122 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/StartButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/StartButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/CharacterSelectionButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/CharacterSelectionButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/CharacterSelectionButton" to="." method="_on_CharacterSelectionButton_pressed"]
[connection signal="focus_entered" from="Control/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="Control/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="value_changed" from="Control/HBoxContainer/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
